# py-context-graph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NEO4J_IMPLEMENTATION_EMAIL.md  NEO4J_IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  test.yml
examples/: README.md  complete_neo4j_demo.py  neo4j_demo.py  run.py  sample_conversation_1.txt  sample_conversation_2.txt  sample_conversation_3.txt  viewer.html
src/decision_graph/: __init__.py  clustering_service.py  context_retrieval.py  decision_enrichment.py  decision_trace_pipeline.py  enrichment_service.py  extraction_service.py  graph.py  ingestion.py  markdown_chunker.py  prompt_loader.py  retrieval.py  services.py  visualization.py
src/decision_graph/context_graph/: planner.py  post_processing.py  registry.py  service.py  templates.py
src/decision_graph/core/: config.py  decision_trace_profiles.py  domain.py  interfaces.py  matching.py  registry.py  stop_words.txt
src/decision_graph/llm/: __init__.py  litellm_adapter.py
src/decision_graph/prompts/: decision_enrichment.txt  decision_trace.txt
tests/: test_decision_enrichment_merge.py  test_decision_models.py  test_ingestion.py  test_matching_functions.py  test_neo4j_graphstore.py  test_pipeline_memory.py
tests/mockfirestore/: __init__.py  _helpers.py  _transformations.py  client.py  collection.py  document.py  query.py  transaction.py
tests/unit/decision_graph/: test_clustering_service.py  test_ingestion.py  test_pipeline_memory.py  test_search_hydration.py
(+18 files in other folders)
